# Goster-IoT

./: .dockerignore  .env.example  .gitignore  Cargo.toml  docker-compose.example.yml  memory.x  platformio.ini  readme.md
.cargo/: config.toml
.github/workflows/: docker-publish.yml  frontend-ci.yml
contracts/: openapi.yaml
cpp/: compile_commands.json
cpp/include/: ConfigManager.h  CryptoLayer.h  GosterProtocol.h  Hardware.h  NetworkManager.h  ProtocolUtils.h  SerialBridge.h
cpp/src/: ConfigManager.cpp  CryptoLayer.cpp  GosterProtocol.cpp  Hardware.cpp  NetworkManager.cpp  ProtocolUtils.cpp  SerialBridge.cpp  main.cpp
docs/: API_SPECIFICATION.md  CONFIGURATION.md  EMBEDDED_DESIGN.md  MIJIA_INGESTION_PLAN.md  OPENAPI_HTTP.yaml  PROJECT_STRUCTURE.md  todo.md  后端模块说明.md
frontend/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/src/: middleware.ts  proxy.ts
go/: .env.example  Dockerfile  docker-compose.example.yml  go.mod  go.sum  main.go  no_stdlog_test.go
go/cli/: cli.go  cli_logger_test.go  db_command_test.go  simulation_test.go
go/db/: atlas.hcl
go/html/: blacklist.html  blacklist_table.html  device_list.html  index.html  login.html  metrics.html  pending_list.html  pending_table.html  register.html  user_list.html
proto/: go.mod  goster.proto
protocol-ingress/: Dockerfile  go.mod  go.sum
rust/: Cargo.toml
src/: device_meta.rs  dht11_sensor.rs  esp_bridge.rs  goster_serial.rs  logo.rs  main.rs  mh_sensor.rs  ntc_sensor.rs  protocol_structs.rs  sensor_manager.rs  storage.rs  w25q46_drive.rs  w25q64.rs
(+297 files in other folders)
