[package]
name = "Goster-IoT"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "Goster-IoT"
test = false
bench = false


# 针对 STM32F1系列的 HAL 库
[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "0.2.0"
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103", "medium"] }
heapless = "0.9.2"
micromath = "0.5.1"
embedded-hal = "0.2.7"
stm32-device-signature = { version = "0.3.3", features = ["stm32f1"] }
rtt-target = "0.6.2"
critical-section = { version = "1.1" }

# 针对 dev (debug) 模式的优化
[profile.dev]
opt-level = "s"      # "s" 代表针对代码体积进行优化 (size)
lto = true           # 开启链接时优化 (Link Time Optimization)，能大幅删减未使用的代码
panic = "abort"

# 针对 release 模式的优化（如果你以后用 --release 编译）
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1    # 进一步提高优化质量
panic = "abort"